# deep-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.toml
docs/: ARCHITECTURE.md  CONCEPT.md  ROADMAP.md  TODO.md
src/deep_research/: __init__.py  cli.py  config.py  graph.py  search.py  state.py  storage.py
src/deep_research/nodes/: __init__.py  analyze.py  plan.py  report.py  search.py
tests/: __init__.py
